# TrackType

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  aicleanup.cpp  aicleanup.h  app.rc.in  audiocapture.cpp  audiocapture.h  clickinjector.cpp  clickinjector.h  globalhotkey.cpp  globalhotkey.h  levelmeter.cpp  levelmeter.h  macos_utils.h  macos_utils.mm  main.cpp  mainwindow.cpp  mainwindow.h  modeldownloader.cpp  modeldownloader.h  modelmanager.cpp  modelmanager.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  sttengine.h  textinjector.cpp  textinjector.h  textnormalizer.cpp  textnormalizer.h  transcriptpreview.cpp  transcriptpreview.h  transcriptprocessor.cpp  transcriptprocessor.h  whisperengine.cpp  whisperengine.h  windowwatcher.cpp  windowwatcher.h
.github/workflows/: build.yml
icons/: TrackType.icns
installer/: 71-tracktype-input.rules  Bundle.wxs  Info.plist.in  License.rtf  TrackType.desktop  TrackType.wxs  postinst
tests/: CMakeLists.txt  tst_audiocapture.cpp  tst_placeholder.cpp  tst_textnormalizer.cpp  tst_transcriptprocessor.cpp  tst_whisperengine.cpp
translations/: tracktype_ar.ts  tracktype_bn.ts  tracktype_cs.ts  tracktype_es.ts  tracktype_fr.ts  tracktype_hi.ts  tracktype_ja.ts  tracktype_ko.ts  tracktype_pt.ts  tracktype_ru.ts  tracktype_ur.ts  tracktype_zh_CN.ts  tsparser.cpp  tsparser.h
